<resources>
    <string name="app_name">pruebaCartago</string>




    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuracion</string>



    <string name="tramiautos">TRAMIAUTOS</string>
    <string name="descripcion">Esta es una aplicacion que permite el control de los vehiculos y tramites como: renovacion de el SOAT, revicion tecnomecanica. Control en el pago de impuesto vehicular para manejar documentacion que permite informar proximos eventos </string>
    <string name="perfil">Mi Perfil</string>
    <string name="participante1">Junior Bonilla</string>
    <string name="participante2">John Bautista</string>
    <string name="senasoft">SENASOFT 2018</string>

    <string name="inicio">Inicio</string>
    <string name="registro_de_autos">Registro de Autos</string>
    <string name="servicios">Servicios</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="acerca_de">Acerca de</string>
    <string name="salir">Salir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <string name="guardar_registro_conductor">Guardar Registro Conductor</string>
    <string name="eventos">Proximos Eventos</string>
    <string name="marca">Marca</string>
    <string name="Renovacion">Renovacion SOAt:</string>
    <string name="placa">Placa</string>
    <string name="revicion">Revicion Tecno-Mecanica</string>
    <string name="pago">Pago de Impuesto Vehicular</string>

    <string name="renovacion_soap">Renovación SOAP</string>
    <string name="revicion_tecno">Revición Tecno-mecánica</string>
    <string name="pago_de_impuestos">Pago de Impuestos Vehicular</string>
    <string name="pico_y_placa">Pico y Placa</string>

</resources>
