<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".frm_Servicios">

    <!-- TODO: Update blank fragment layout -->

    <Switch
        android:id="@+id/swSoap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/renovacion_soap"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp" />

    <Switch
        android:id="@+id/swTecn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/revicion_tecno"
        app:layout_constraintTop_toBottomOf="@+id/swSoap"
        tools:layout_editor_absoluteX="10dp" />

    <Switch
        android:id="@+id/swPago"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginTop="44dp"
        android:text="@string/pago_de_impuestos"
        app:layout_constraintTop_toBottomOf="@+id/swTecn"
        tools:layout_editor_absoluteX="10dp" />

    <Switch
        android:id="@+id/swPyP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/pico_y_placa"
        app:layout_constraintTop_toBottomOf="@+id/swPago"
        tools:layout_editor_absoluteX="10dp" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/senasoft"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lbJunior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lbJunior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:text="@string/participante1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lbJohn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lbJohn"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginBottom="8dp"
        android:text="@string/participante2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="137dp" />


    <TextView
        android:id="@+id/lbLinea"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorGris"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        tools:layout_editor_absoluteX="10dp" />


</android.support.constraint.ConstraintLayout>