<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="19dp"
    android:layout_height="match_parent"
    tools:context=".frm_Inicio">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventos"
        android:textSize="24sp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marca" />

                <TextView
                    android:id="@+id/textView9v"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Renovacion" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placa" />
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marca" />

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/revicion" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placa" />
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marca" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pago" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placa" />
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/lbLinea"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorGris"
        tools:layout_editor_absoluteX="10dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/senasoft"
        android:textSize="24sp"
        android:textStyle="bold"
 />

    <TextView
        android:id="@+id/lbJunior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/participante1"
        android:textSize="18sp"
       />



    <TextView
        android:id="@+id/lbJohn"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="@string/participante2"
        android:textSize="18sp"
        />


</LinearLayout>